--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,6 +5,6 @@
 
   </head>
   <body>
-    <iframe src="http://localhost:3000/form"  width="600" height="600" />
+    <iframe src="/form"  width="600" height="600" />
   </body>
 </html>
