--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,8 +4,10 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- includes the Braintree JS client SDK -->
-    <script src="https://js.braintreegateway.com/web/3.44.2/js/client.min.js"></script>
-    <script src="https://js.braintreegateway.com/web/3.44.2/js/hosted-fields.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.69.0/js/client.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.69.0/js/data-collector.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.69.0/js/hosted-fields.min.js"></script>
+    
 
     <!-- includes jQuery -->
     <script src="http://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
