add some svg icon

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -7,7 +7,11 @@
       <div class="textfield--float-label">
         <!-- Begin hosted fields section -->
         <label class="hosted-field--label" for="card-number"><span class="icon">
-         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2zm0 14H4v-6h16v6zm0-10H4V6h16v2z"/></svg></span> Card Number 
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
+              <path d="M0 0h24v24H0z" fill="none" />
+              <path
+                d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2zm0 14H4v-6h16v6zm0-10H4V6h16v2z" />
+            </svg></span> Card Number
         </label>
         <div id="card-number" class="hosted-field"></div>
         <!-- End hosted fields section -->
@@ -15,9 +19,12 @@
       <div class="textfield--float-label">
         <!-- Begin hosted fields section -->
         <label class="hosted-field--label" for="expiration-date">
-           <span class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"/></svg>
-         </span>
+          <span class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
+              <path
+                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z" />
+            </svg>
+          </span>
           Expiration Date</label>
         <div id="expiration-date" class="hosted-field"></div>
         <!-- End hosted fields section -->
@@ -26,223 +33,247 @@
         <!-- Begin hosted fields section -->
         <label class="hosted-field--label" for="cvv">
           <span class="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"/></svg>
-            </span>
-            CVV</label>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
+              <path
+                d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z" />
+            </svg>
+          </span>
+          CVV</label>
         <div id="cvv" class="hosted-field"></div>
         <!-- End hosted fields section -->
       </div>
       <div class="textfield--float-label">
         <!-- Begin hosted fields section -->
         <label class="hosted-field--label" for="postal-code">
-           <span class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-    <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
-         </span>
+          <span class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
+              <path
+                d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z" />
+            </svg>
+          </span>
           Postal Code</label>
         <div id="postal-code" class="hosted-field"></div>
         <!-- End hosted fields section -->
       </div>
-       <div class="textfield--float-label">
+      <div class="textfield--float-label">
         <!-- Begin hosted fields section -->
         <label class="hosted-field--label" for="orderId">
+          <span class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill"
+              viewBox="0 0 16 16">
+              <path fill-rule="evenodd"
+                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+            </svg>
+          </span>
           Order Id (only for test)</label>
-        <input type="text" id="orderId" class="hosted-field"/>
+        <input type="text" id="orderId" class="hosted-field" />
         <!-- End hosted fields section -->
       </div>
       <div class="textfield--float-label">
         <!-- Begin hosted fields section -->
         <label class="hosted-field--label" for="amount">
+          <span class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+              <path d="M0 0h24v24H0z" fill="none" />
+              <path
+                d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z" />
+            </svg>
+          </span>
           Amount</label>
-        <input type="text" id="amount" class="hosted-field"/>
+        <input type="text" id="amount" class="hosted-field" />
         <!-- End hosted fields section -->
       </div>
     </div>
     <footer class="panel__footer">
-      <input type="submit" value="Pay" class="pay-button" disabled />
+      <input type="submit" value="Pay" class="pay-button" />
     </footer>
   </div>
 </form>
 
 <style>
-
-/*--------------------
+  /*--------------------
 GENERAL
 --------------------*/
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
+  }
 
 
-html {
-  box-sizing: border-box;
-  height: 100%;
-  overflow: hidden;
-}
+  html {
+    box-sizing: border-box;
+    height: 100%;
+    overflow: hidden;
+  }
 
-body {
-  background: #f2f2f2;
-  font-family: 'Roboto', verdana, sans-serif;
-  height: 100%;
-}
+  body {
+    background: #f2f2f2;
+    font-family: 'Roboto', verdana, sans-serif;
+    height: 100%;
+  }
 
-h1 {
-  font-size: 1.5em;
-  font-weight: 100;
-}
+  h1 {
+    font-size: 1.5em;
+    font-weight: 100;
+  }
 
-#cardForm {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  #cardForm {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
 
-/*--------------------
+  /*--------------------
 PANEL FORM
 --------------------*/
 
-.panel {
-  background: #FFF;
-  width: 80%;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 0 2px 0 rgba(0, 0, 0, .12);
-}
-
-.panel__header {
-  background: #3F51B5;
-  color: #FFF;
-}
-
-.panel__header,
-.panel__footer {
-  padding: 1em 2em;
-}
-
-.panel__footer {
-  background: #f3f3f3;
-}
-
-.panel__content {
-  padding: 1em 2em;
-  overflow: hidden;
-}
-
-.textfield--float-label {
-  width: 50%;
-  float: left;
-  display: inline-block;
-  padding-right: 5px;
-}
-
-.hosted-field--label {
-  transform: translateY(0.4em);
-  font-size: 1.125em;
-  line-height: 32px;
-  transition: all .15s ease-out;
-  display: block;
-  width: 100%;
-  font-weight: 400;
-  overflow: hidden;
-  margin-bottom: 0.5em;
-  &.label-float {
-    text-overflow: ellipsis;
-    color: #2196F3;
-    transition: all .15s ease-out
+  .panel {
+    background: #FFF;
+    width: 80%;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 0 2px 0 rgba(0, 0, 0, .12);
   }
-  &.filled {
-    @extend .label-float;
-    color: rgba(0, 0, 0, .54);
+
+  .panel__header {
+    background: #3F51B5;
+    color: #FFF;
   }
-  &.invalid {
-    @extend .label-float;
-    color: #F44336;
+
+  .panel__header,
+  .panel__footer {
+    padding: 1em 2em;
   }
-}
 
-span.icon {
-  position: relative;
-  top: 0.2em;
-  margin-right: 0.2em;
-}
+  .panel__footer {
+    background: #f3f3f3;
+  }
 
-svg {
-  fill: #333;
-}
+  .panel__content {
+    padding: 1em 2em;
+    overflow: hidden;
+  }
 
-.hosted-field {
-  height: 32px;
-  margin-bottom: 1em;
-  display: block;
-  background-color: transparent;
-  color: rgba(0, 0, 0, .87);
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .26);
-  outline: 0;
-  width: 100%;
-  font-size: 16px;
-  padding: 0;
-  box-shadow: none;
-  border-radius: 0;
-  position: relative;
-}
+  .textfield--float-label {
+    width: 50%;
+    float: left;
+    display: inline-block;
+    padding-right: 5px;
+  }
 
-.pay-button {
-  background: #2E8B57;
-  color: #fff;
-  margin: 0 auto;
-  border: 0;
-  border-radius: 3px;
-  padding: 1em 3em;
-  font-size: 1em;
-  text-transform: uppercase;
-  box-shadow: 0 0 2px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .2);
-}
+  .hosted-field--label {
+    transform: translateY(0.4em);
+    font-size: 1.125em;
+    line-height: 32px;
+    transition: all .15s ease-out;
+    display: block;
+    width: 100%;
+    font-weight: 400;
+    overflow: hidden;
+    margin-bottom: 0.5em;
+
+    &.label-float {
+      text-overflow: ellipsis;
+      color: #2196F3;
+      transition: all .15s ease-out
+    }
+
+    &.filled {
+      @extend .label-float;
+      color: rgba(0, 0, 0, .54);
+    }
+
+    &.invalid {
+      @extend .label-float;
+      color: #F44336;
+    }
+  }
+
+  span.icon {
+    position: relative;
+    top: 0.2em;
+    margin-right: 0.2em;
+  }
+
+  svg {
+    fill: #333;
+  }
+
+  .hosted-field {
+    height: 32px;
+    margin-bottom: 1em;
+    display: block;
+    background-color: transparent;
+    color: rgba(0, 0, 0, .87);
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, .26);
+    outline: 0;
+    width: 100%;
+    font-size: 16px;
+    padding: 0;
+    box-shadow: none;
+    border-radius: 0;
+    position: relative;
+  }
+
+  .pay-button {
+    background: #2E8B57;
+    color: #fff;
+    margin: 0 auto;
+    border: 0;
+    border-radius: 3px;
+    padding: 1em 3em;
+    font-size: 1em;
+    text-transform: uppercase;
+    box-shadow: 0 0 2px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .2);
+  }
 
 
-/*--------------------
+  /*--------------------
 BT HOSTED FIELDS SPECIFIC 
 --------------------*/
 
-.braintree-hosted-fields-focused {
-  border-bottom: 2px solid #3F51B5;
-  transition: all 200ms ease;
-}
+  .braintree-hosted-fields-focused {
+    border-bottom: 2px solid #3F51B5;
+    transition: all 200ms ease;
+  }
 
-.braintree-hosted-fields-invalid {
-  border-bottom: 2px solid #E91E63;
-  transition: all 200ms ease;
-}
+  .braintree-hosted-fields-invalid {
+    border-bottom: 2px solid #E91E63;
+    transition: all 200ms ease;
+  }
 
-
-/*---------------------
+  /*---------------------
 Media Queries
 ----------------------*/
 
-@media (max-width: 600px) {
-  html {
-    overflow: auto;
+  @media (max-width: 600px) {
+    html {
+      overflow: auto;
+    }
+
+    #cardForm {
+      height: auto;
+      margin: 2em;
+      font-size: 13px;
+    }
+
+    .panel {
+      width: 100%;
+    }
+
+    .textfield--float-label {
+      width: 100%;
+      float: none;
+      display: inline-block;
+    }
+
+    .pay-button {
+      width: 100%;
+    }
   }
-  #cardForm {
-    height: auto;
-    margin: 2em;
-    font-size: 13px;
-  }
-  .panel {
-    width: 100%;
-  }
-  .textfield--float-label {
-    width: 100%;
-    float: none;
-    display: inline-block;
-  }
-  .pay-button {
-    width: 100%;
-  }
-}
 </style>
 
 <script>
@@ -251,7 +282,7 @@ Media Queries
   var deviceData = null;
 
 
-// reference_id just for test
+  // reference_id just for test
   var orderId = '123456';
 
   braintree.client.create({
@@ -293,6 +324,9 @@ Media Queries
           },
           'input::placeholder': {
             'opacity': '0.3'
+          },
+          ':focus': {
+            'color': '#333333'
           }
         },
         fields: {
@@ -318,8 +352,6 @@ Media Queries
           console.error(hostedFieldsErr);
           return;
         }
-
-        submit.removeAttribute('disabled');
 
         form.addEventListener('submit', function (event) {
           event.preventDefault();
@@ -360,7 +392,7 @@ Media Queries
 
               dataCollectorInstance.teardown(function () {
                 // teardown is complete
-                 console.info('Drop-in UI has been tear down!');
+                console.info('Drop-in UI has been tear down!');
               });
 
               if (result.success) {
