--- a/views/form.hbs
+++ b/views/form.hbs
@@ -303,7 +303,6 @@ Media Queries
   }, function (clientErr, clientInstance) {
     if (clientErr) {
       $('#error-message').html(clientErr.message);
-      console.error(clientErr);
       return;
     }
 
@@ -313,7 +312,6 @@ Media Queries
     }, function (err, dataCollectorInstance) {
       if (err) {
         // Handle error in creation of data collector
-        console.error(err);
         $('#error-message').html(err.message);
         return;
       }
@@ -364,7 +362,6 @@ Media Queries
         }
       }, function (hostedFieldsErr, hostedFieldsInstance) {
         if (hostedFieldsErr) {
-          console.error(hostedFieldsErr);
           $('#error-message').html(hostedFieldsErr.message);
           return;
         }
@@ -379,18 +376,10 @@ Media Queries
           hostedFieldsInstance.tokenize(function (tokenizeErr, payload) {
             if (tokenizeErr) {
               $('#error-message').html(tokenizeErr.message);
-              console.error(tokenizeErr);
               return;
             }
-
-            // If this was a real integration, this is where you would
-            // send the nonce to your server.
-            console.log('Got a nonce: ' + payload.nonce);
-
             // below data should be replace with freemark input
             orderId = document.getElementById('orderId').value || orderId;
-
-
 
             $.ajax({
               type: 'POST',
@@ -412,19 +401,15 @@ Media Queries
                 }
               });
 
-              dataCollectorInstance.teardown(function () {
-                // teardown is complete
-                console.info('Drop-in UI has been tear down!');
-              });
+              dataCollectorInstance.teardown(function () {});
 
               if (result.success) {
                 console.log("authorization success : " + result.transaction.id);
                 $('#checkout-message').html('<h1>Payment Success</h1><p></p><p>Refresh to try another transaction.</p>');
-                window.navigate(relayRedirctUrl);
+                top.location.href = relayRedirctUrl;
               } else {
-                console.log(result);
                 $('#merror-message').html(result.message);
-                window.navigate(relayRedirctUrl);
+                top.location.href = relayRedirctUrl;
               }
             });
 
