--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
     <script src="https://js.braintreegateway.com/web/3.69.0/js/client.min.js"></script>
     <script src="https://js.braintreegateway.com/web/3.69.0/js/data-collector.min.js"></script>
     <script src="https://js.braintreegateway.com/web/3.69.0/js/hosted-fields.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.69.0/js/three-d-secure.min.js"></script>
     
 
     <!-- includes jQuery -->
