--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,7 @@
     
 
     <!-- includes jQuery -->
-    <script src="http://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
   </head>
   <body>
     {{{body}}}
